# coin-trading-bot

./: .env_sample  README.md  pyproject.toml  run.py  run_private_info.py
apis/: common_types.py  util.py
apis/private/: info.py  trading.py
apis/public/: api.py  types.py
config/: __init__.py
tests/util/: test_order_quantity.py
util/: order_quantity.py
