[tool.poetry]
name = "coin-trading-bot"
version = "0.1.0"
description = ""
authors = ["brightchul <abhbtbb1@gmail.com>"]
readme = "README.md"
packages = [{include = "coin_trading_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"
aiodns = "^3.1.1"
brotli = "^1.1.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
